src/parser/snapshots/monkey_language_server__parser__test__fn_expr_happy_2.snap
---
source: src/parser/test.rs
description: "fn(x) {}"
expression: result
---
[
    Function {
        token: Token(Function, "fn", (0,0)->(0,2)),
        params: Ok(
            [
                Ok(
                    Identifier {
                        token: Token(Identifier, "x", (0,3)->(0,4)),
                        name: "x",
                    },
                ),
            ],
        ),
        body: Ok(
            Block {
                token: Token(LBrace, "{", (0,6)->(0,7)),
                statements: [],
                start: (0,6),
                end: (0,7),
            },
        ),
    },
]

===================================

fn(x) {}
