src/parser/snapshots/monkey_language_server__parser__test__fn_expr_happy_4.snap
---
source: src/parser/test.rs
description: "fn(x) { return x; }"
expression: result
---
[
    Function {
        token: Token(Function, "fn", (0,0)->(0,2)),
        params: Ok(
            [
                Ok(
                    Identifier {
                        token: Token(Identifier, "x", (0,3)->(0,4)),
                        name: "x",
                    },
                ),
            ],
        ),
        body: Ok(
            Block {
                token: Token(LBrace, "{", (0,6)->(0,7)),
                statements: [
                    Return {
                        token: Token(Return, "return", (0,8)->(0,14)),
                        value: Some(
                            Ok(
                                Identifier {
                                    token: Token(Identifier, "x", (0,15)->(0,16)),
                                    name: "x",
                                },
                            ),
                        ),
                        range: Range {
                            start: Position {
                                line: 0,
                                character: 8,
                            },
                            end: Position {
                                line: 0,
                                character: 17,
                            },
                        },
                    },
                ],
                range: Range {
                    start: Position {
                        line: 0,
                        character: 6,
                    },
                    end: Position {
                        line: 0,
                        character: 18,
                    },
                },
            },
        ),
        range: Range {
            start: Position {
                line: 0,
                character: 0,
            },
            end: Position {
                line: 0,
                character: 19,
            },
        },
    },
]

===================================

fn(x) { return x; }
