src/parser/snapshots/monkey_language_server__parser__test__fn_expr_happy_5_errors.snap
---
source: src/parser/test.rs
description: "fn(x, y) { let z = x + y; return z; }"
expression: "parser_errors(\"fn(x, y) { let z = x + y; return z; }\", errors)"
---
fn(x, y) { let z = x + y; return z; }
