src/parser/snapshots/monkey_language_server__parser__test__fn_expr_happy_6_errors.snap
---
source: src/parser/test.rs
description: "fn(x, y, z,) {}"
expression: "parser_errors(\"fn(x, y, z,) {}\", errors)"
---
fn(x, y, z,) {}
