src/parser/snapshots/monkey_language_server__parser__test__fn_expr_happy_7_errors.snap
---
source: src/parser/test.rs
description: "fn(x, y, z,) { if (x) { y } else { z } }"
expression: "parser_errors(\"fn(x, y, z,) { if (x) { y } else { z } }\", errors)"
---
fn(x, y, z,) { if (x) { y } else { z } }
